--- a/RomRepoMgr/Views/SettingsDialog.xaml
+++ b/RomRepoMgr/Views/SettingsDialog.xaml
@@ -29,6 +29,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:RomRepoMgr.ViewModels;assembly=RomRepoMgr"
+        xmlns:resources="clr-namespace:RomRepoMgr.Resources"
         mc:Ignorable="d"
         d:DesignWidth="800"
         d:DesignHeight="450"
@@ -37,7 +38,7 @@
         x:Class="RomRepoMgr.Views.SettingsDialog"
         Icon="/Assets/avalonia-logo.ico"
         CanResize="False"
-        Title="{Binding Title}">
+        Title="{x:Static resources:Localization.SettingsTitle}">
     <Design.DataContext>
         <vm:SettingsViewModel />
     </Design.DataContext>
@@ -54,7 +55,7 @@
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
-                           Text="{Binding DatabaseLabel}"
+                           Text="{x:Static resources:Localization.DatabaseFileLabel}"
                            FontWeight="Bold"
                            Padding="5" />
                 <TextBox Grid.Column="1"
@@ -68,7 +69,7 @@
                         VerticalAlignment="Center"
                         Command="{Binding DatabaseCommand}"
                         Padding="5">
-                    <TextBlock Text="{Binding ChooseLabel}" />
+                    <TextBlock Text="{x:Static resources:Localization.ChooseLabel}" />
                 </Button>
             </Grid>
             <Grid Grid.Row="1">
@@ -78,7 +79,7 @@
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
-                           Text="{Binding RepositoryLabel}"
+                           Text="{x:Static resources:Localization.RepositoryFolderLabel}"
                            FontWeight="Bold"
                            Padding="5" />
                 <TextBox Grid.Column="1"
@@ -92,7 +93,7 @@
                         VerticalAlignment="Center"
                         Command="{Binding RepositoryCommand}"
                         Padding="5">
-                    <TextBlock Text="{Binding ChooseLabel}" />
+                    <TextBlock Text="{x:Static resources:Localization.ChooseLabel}" />
                 </Button>
             </Grid>
             <Grid Grid.Row="2">
@@ -102,7 +103,7 @@
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
-                           Text="{Binding TemporaryLabel}"
+                           Text="{x:Static resources:Localization.TemporaryFolderLabel}"
                            FontWeight="Bold"
                            Padding="5" />
                 <TextBox Grid.Column="1"
@@ -116,7 +117,7 @@
                         VerticalAlignment="Center"
                         Command="{Binding TemporaryCommand}"
                         Padding="5">
-                    <TextBlock Text="{Binding ChooseLabel}" />
+                    <TextBlock Text="{x:Static resources:Localization.ChooseLabel}" />
                 </Button>
             </Grid>
             <Grid Grid.Row="3">
@@ -126,7 +127,7 @@
                 <TextBlock Grid.Column="0"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Center"
-                           Text="{Binding UnArPathLabel}"
+                           Text="{x:Static resources:Localization.UnArPathLabel}"
                            FontWeight="Bold"
                            Padding="5" />
                 <TextBox Grid.Column="1"
@@ -140,7 +141,7 @@
                         VerticalAlignment="Center"
                         Command="{Binding UnArCommand}"
                         Padding="5">
-                    <TextBlock Text="{Binding ChooseLabel}" />
+                    <TextBlock Text="{x:Static resources:Localization.ChooseLabel}" />
                 </Button>
             </Grid>
             <TextBlock Grid.Row="4"
@@ -154,12 +155,12 @@
                 <Button HorizontalAlignment="Right"
                         VerticalAlignment="Center"
                         Command="{Binding SaveCommand}">
-                    <TextBlock Text="{Binding SaveLabel}" />
+                    <TextBlock Text="{x:Static resources:Localization.SaveLabel}" />
                 </Button>
                 <Button HorizontalAlignment="Right"
                         VerticalAlignment="Center"
                         Command="{Binding CloseCommand}">
-                    <TextBlock Text="{Binding CloseLabel}" />
+                    <TextBlock Text="{x:Static resources:Localization.CloseLabel}" />
                 </Button>
             </StackPanel>
         </Grid>
